--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ android {
     buildToolsVersion '27.0.3'
 
     defaultConfig {
-        applicationId "com.sevencrayons.compass"
+        applicationId "com.islam.compass_noads"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 201804121
-        versionName "1.0.3"
+        versionName "1.0.4"
     }
     buildTypes {
         release {
